# lecture-ss-new-database-concepts

./: README.md
chapter-consensus/: README.md
chapter-consensus/patrick-db-raft/: Cargo.toml
chapter-consensus/patrick-db-raft/src/: main.rs  raft_storage.rs
chapter-consistency/: README.md
chapter-consistency/patrick-db-sequencer/: Cargo.toml
chapter-consistency/patrick-db-sequencer/src/: main.rs
chapter-consistency/patrick-db-tob/src/: replica.rs
chapter-encoding-and-evolvability/: README.md
chapter-encoding-and-evolvability/patrick-db-client/src/: lib.rs
chapter-encoding-and-evolvability/patrick-db-rest/src/: main.rs
chapter-encoding-and-evolvability/patrick-db/src/: hashmap_log.rs  main.rs  server.rs
chapter-indexing/: .gitignore  Cargo.toml  README.md
chapter-indexing/src/: main.rs
chapter-partitioning/: README.md
chapter-partitioning/patrick-db-client/src/: lib.rs
chapter-partitioning/patrick-db/src/: hashmap_log.rs  main.rs  server.rs
chapter-replication/: README.md
chapter-replication/patrick-db/: .gitignore
chapter-replication/patrick-db-client/src/: lib.rs
chapter-replication/patrick-db-rest/: Cargo.toml
chapter-replication/patrick-db/src/: hashmap_log.rs  main.rs  server.rs
chapter-transaction/: Makefile  README.md
chapter-transaction/drill/fixtures/: keys.csv
chapter-transaction/multi-thread-server/src/: main.rs
chapter-transaction/single-thread-server/: Cargo.toml
chapter-transaction/single-thread-server/src/: main.rs
hashmap-lock-comparison/drill/: benchmark.yml  benchmark2.yml
hashmap-lock-comparison/multi-thread-server/: Cargo.toml
hashmap-lock-comparison/multi-thread-server/src/: main.rs
hashmap-lock-comparison/single-thread-server/src/: main.rs
patrick-db/: Cargo.toml  docker-compose.yaml  log  log2  log3  log4
patrick-db-client/: Cargo.toml
patrick-db-client/src/: lib.rs
patrick-db-raft/: Cargo.toml
patrick-db-raft/src/: main.rs  raft_node.rs  raft_storage.rs
patrick-db-rest/docker/local/: Dockerfile
patrick-db-rest/src/: main.rs
patrick-db-sequencer/src/: main.rs
patrick-db-tob/: Cargo.toml
patrick-db-tob/src/: main.rs  replica.rs
patrick-db/src/: hashmap_log.rs  main.rs  server.rs  tob2.rs
