[package]
name = "chapter-indexing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bincode = "1.3.3"
dashmap = "5.4.0"
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
clap = { version = "4.1.6", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
