[package]
name = "patrick-db-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bincode = "1.3.3"
encoding_rs = "0.8.31"
encoding_rs_io = "0.1.7"
futures = "0.3.25"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["full"] }
