[package]
name = "patrick-db-raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bincode = "1.3.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["full"] }
log = "0.4"
env_logger = "0.9"
clap = { version = "4.1.6", features = ["derive"] }
raft = "0.7.0"
tokio-util = { version = "0.7.7", features = ["codec"] }
futures = "0.3.18"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.9.0"
protobuf = "2.28.0"
regex = "1.7.3"
bytes = "1.4.0"
