[package]
name = "patrick-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bincode = "1.3.3"
dashmap = "5.4.0"
encoding_rs = "0.8.31"
encoding_rs_io = "0.1.7"
futures = "0.3.25"
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["full"] }
log = "0.4"
env_logger = "0.9"
clap = { version = "4.1.6", features = ["derive"] }
