[package]
name = "patrick-db-sequencer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bincode = "1.3.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["full"] }
log = "0.4"
env_logger = "0.9"
clap = { version = "4.1.6", features = ["derive"] }
