[package]
name = "patrick-db-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
patrick-db-client = { path = "../patrick-db-client" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
log = "0.4"
env_logger = "0.9"
futures = "0.3.25"
serde_derive = "1.0.152"
anyhow = "1.0.69"
bincode = "1.3.3"
