[package]
name = "single-thread-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
log = "0.4"
env_logger = "0.9"
serde_derive = "1.0.152"
tokio = { version = "1.25.0", features = ["full"] }
anyhow = "1.0.69"
httparse = "1.8.0"
